--- a/LaunchpadGamer/LaunchpadGamer.vcxproj
+++ b/LaunchpadGamer/LaunchpadGamer.vcxproj
@@ -142,29 +142,45 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="lib\launchpad.h" />
-    <ClInclude Include="lib\mapper.h" />
+    <ClInclude Include="lib\lpdgamer\extravk.h" />
+    <ClInclude Include="lib\lpdgamer\inputagent.h" />
+    <ClInclude Include="lib\lpdgamer\launchpad.h" />
+    <ClInclude Include="lib\lpdgamer\mapper.h" />
     <ClInclude Include="lib\midifile\Binasc.h" />
     <ClInclude Include="lib\midifile\MidiEvent.h" />
     <ClInclude Include="lib\midifile\MidiEventList.h" />
     <ClInclude Include="lib\midifile\MidiFile.h" />
     <ClInclude Include="lib\midifile\MidiMessage.h" />
     <ClInclude Include="lib\midifile\Options.h" />
+    <ClInclude Include="lib\lpdgamer\padstatus.h" />
     <ClInclude Include="lib\rtmidi\RtMidi.h" />
     <ClInclude Include="lib\rtmidi\rtmidi_c.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="lib\launchpad.cpp" />
-    <ClCompile Include="lib\mapper.cpp" />
+    <ClCompile Include="lib\lpdgamer\inputagent.cpp" />
+    <ClCompile Include="lib\lpdgamer\launchpad.cpp" />
+    <ClCompile Include="lib\lpdgamer\mapper.cpp" />
     <ClCompile Include="lib\midifile\Binasc.cpp" />
     <ClCompile Include="lib\midifile\MidiEvent.cpp" />
     <ClCompile Include="lib\midifile\MidiEventList.cpp" />
     <ClCompile Include="lib\midifile\MidiFile.cpp" />
     <ClCompile Include="lib\midifile\MidiMessage.cpp" />
     <ClCompile Include="lib\midifile\Options.cpp" />
+    <ClCompile Include="lib\lpdgamer\padstatus.cpp" />
     <ClCompile Include="lib\rtmidi\RtMidi.cpp" />
     <ClCompile Include="lib\rtmidi\rtmidi_c.cpp" />
     <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+    <None Include="config\lol\keymap.ini" />
+    <None Include="config\lol\light.ini" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\licenses\launchpadgamer.txt" />
+    <Text Include="..\licenses\libmidifile.txt" />
+    <Text Include="..\licenses\librtmidi.txt" />
+    <Text Include="..\licenses\lightpad.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
