fix wrong action

--- a/LaunchpadGamer/config/example/keymap.ini
+++ b/LaunchpadGamer/config/example/keymap.ini
@@ -79,7 +79,7 @@
 3,7  KEYAUTO  MouseShift(0,+AUTO)
 3,8  KEYAUTO  MouseShift(+AUTO,+AUTO)
 2,6  KEYAUTO  MouseShift(-AUTO,0)
-2,7  KEYAUTO  MouseClick()
+2,7  KEYAUTO  MouseLeft()
 2,8  KEYAUTO  MouseShift(+AUTO,0)
 1,6  KEYAUTO  MouseShift(-AUTO,-AUTO)
 1,7  KEYAUTO  MouseShift(0,-AUTO)
