Fix Keymap and Light Map

--- a/LaunchpadGamer/config/example/light.ini
+++ b/LaunchpadGamer/config/example/light.ini
@@ -39,7 +39,7 @@
 3,7  KEYAUTO  SetColor(3,7,45);Sleep(25);SetColor(4,7,45);Sleep(25);SetColor(5,7,45);Sleep(25);SetColor(6,7,45);Sleep(25);SetColor(7,7,45);Sleep(25);SetColor(8,7,45)
 3,8  KEYAUTO  SetColor(3,8,45)
 2,6  KEYAUTO  SetColor(2,6,45);Sleep(25);SetColor(2,5,45);Sleep(25);SetColor(2,4,45);Sleep(25);SetColor(2,3,45);Sleep(25);SetColor(2,2,45);Sleep(25);SetColor(2,1,45)
-2,7  KEYAUTO  SetRowColor(2,45);SetColumnColor(7,45)
+2,7  KEYAUTO  SetColor(3,6,40);SetColor(3,8,40);SetColor(1,6,40);SetColor(1,8,40);SetRowColor(2,45);SetColumnColor(7,45);
 2,8  KEYAUTO  SetColor(2,8,45)
 1,6  KEYAUTO  SetColor(1,6,45)
 1,7  KEYAUTO  SetColor(1,7,45)
